--- a/W5-Final-Project/predict.ipynb
+++ b/W5-Final-Project/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_sm = ''\n",
-    "model_md = ''\n",
+    "#model_sm = 'models/ner_sm_do02_ep10_bs64'\n",
+    "#model_md = 'models/ner_med4_sametest_dp_03_e_10_bs_32_md'\n",
     "model_lg = 'models/ner_per_and_org_4_dp_01_e_10_bs_256_lg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "large = load_spacy_model(model_lg, base_model='en_core_web_lg')\n",
-    "medium = load_spacy_model(model_md, base_model='en_core_web_md')\n",
-    "small = load_spacy_model(model_sm, base_model='en_core_web_sm')"
+    "#medium = load_spacy_model(model_md, base_model='en_core_web_md')\n",
+    "#small = load_spacy_model(model_sm, base_model='en_core_web_sm')"
    ]
   },
   {
@@ -118,38 +118,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "text1 = '''\n",
-    "\n",
+    "Germany is facing a backlash from allies over its reluctance to supply Leopard 2 tanks to bolster Ukraine’s fighting capacity in the nearly year-long war with Russia.On Friday, 50 countries agreed to provide Kyiv with billions of dollars’ worth of military hardware, including armoured vehicles and munitions needed to push back Russian forces.But the German defence minister, Boris Pistorius, told reporters at the US Ramstein airbase in Germany that despite heightened expectations, “we still cannot say when a decision will be taken, and what the decision will be, when it comes to the Leopard tank”.Ukraine on Saturday denounced the “global indecision” of its allies in providing heavy-duty modern tanks, saying “today’s indecision is killing more of our people”.“Every day of delay is the death of Ukrainians. Think faster,” tweeted presidential adviser Mykhailo Podolyak.Several allies echoed the Ukrainian president, Volodymyr Zelenskiy, in saying the tanks were essential to Ukraine’s fight with its much larger neighbour.\n",
     "'''\n",
     "\n",
     "text2 = '''\n",
-    "\n",
+    "When the fiercest hurricane ever recorded in the Atlantic is bearing down on you, a salvaged armchair under a wood-and-tin awning might seem a poor choice of shelter. But that's where Don E. (\"I'd rather keep my last name out of it\") was parked when Wilma hit South Florida at 6:30 a.m. last October 24. For Don and a buddy, it was the start of the workday at Jimbo's Place, a ramshackle beer and bait shop down by the water on Miami's Virginia Key. \"Once we got out here, it was kind of too late to do anything but ride it out,\" Don says with a small laugh. Jimbo's looks like nothing so much as an abandoned shack. But whether through good luck or unexpectedly sound construction, it survived Wilma's fury. Mercifully, the winds had ebbed from 185 miles per hour (297.7 kilometers per hour) at sea to 120 miles per hour (193.1 kilometers per hour) by the time the storm hit, but Wilma still left almost all of South Florida without power. For the next two weeks a generator and donated bags of ice kept Jimbo's open—the only establishment on the key where visitors could be assured of a cold beer and a friendly welcome. Wilma was a record breaker in a season of unsettling records. Katrina, at the end of August, killed more than a thousand people and left much of New Orleans and the neighboring coast in ruins. The damage exceeded a hundred billion dollars—the costliest natural disaster in U.S. history—and the toll in fractured lives is incalculable. Rita, in September, rivaled Wilma in intensity and ravaged the Gulf Coast through western Louisiana and East Texas.\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93m\u001b[1mGEOGRAPHICAL ENTITIY\u001b[0m || \u001b[95m\u001b[1mTIME INDICATOR\u001b[0m || \u001b[92m\u001b[1mGEOPOLITICAL ENTITIY\u001b[0m || \u001b[96m\u001b[1mNATURAL PHENOMENON\u001b[0m\n",
+      "\n",
+      "\n",
+      "Germany is facing a backlash from allies over its reluctance to supply Leopard 2 tanks to bolster \u001b[93m\u001b[1mUkraine\u001b[0m’s fighting capacity in the nearly year-long war with \u001b[93m\u001b[1mRussia\u001b[0m.On \u001b[95m\u001b[1mFriday\u001b[0m, 50 countries agreed to provide Kyiv with billions of dollars’ worth of military hardware, including armoured vehicles and munitions needed to push back \u001b[92m\u001b[1mRussian\u001b[0m forces.But the \u001b[92m\u001b[1mGerman\u001b[0m defence minister, Boris Pistorius, told reporters at the \u001b[93m\u001b[1mUS Ramstein\u001b[0m airbase in \u001b[93m\u001b[1mGermany\u001b[0m that despite heightened expectations, “we still cannot say when a decision will be taken, and what the decision will be, when it comes to the Leopard tank”.Ukraine on \u001b[95m\u001b[1mSaturday\u001b[0m denounced the “global indecision” of its allies in providing heavy-duty modern tanks, saying “today’s indecision is killing more of our people”.“Every day of delay is the death of Ukrainians. Think faster,” tweeted presidential adviser Mykhailo Podolyak.Several allies echoed the \u001b[92m\u001b[1mUkrainian\u001b[0m president, Volodymyr Zelenskiy, in saying the tanks were essential to \u001b[93m\u001b[1mUkraine\u001b[0m’s fight with its much larger neighbour.\n",
+      "\n",
+      "CPU times: total: 46.9 ms\n",
+      "Wall time: 86.7 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "%%time\n",
     "text_to_entities(text1, large)[0][0]\n",
-    "text_to_entities(text1, medium)[0][0]\n",
-    "text_to_entities(text1, small)[0][0]"
+    "#text_to_entities(text1, medium)[0][0]\n",
+    "#text_to_entities(text1, small)[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93m\u001b[1mGEOGRAPHICAL ENTITIY\u001b[0m || \u001b[95m\u001b[1mTIME INDICATOR\u001b[0m || \u001b[92m\u001b[1mGEOPOLITICAL ENTITIY\u001b[0m || \u001b[96m\u001b[1mNATURAL PHENOMENON\u001b[0m\n",
+      "\n",
+      "\n",
+      "When the fiercest hurricane ever recorded in the \u001b[93m\u001b[1mAtlantic\u001b[0m is bearing down on you, a salvaged armchair under a wood-and-tin awning might seem a poor choice of shelter. But that's where Don E. (\"I'd rather keep my last name out of it\") was parked when \u001b[96m\u001b[1mWilma\u001b[0m hit \u001b[93m\u001b[1mSouth Florida\u001b[0m at \u001b[95m\u001b[1m6:30 a.m.\u001b[0m last \u001b[95m\u001b[1mOctober 24\u001b[0m. For Don and a buddy, it was the start of the workday at Jimbo's Place, a ramshackle beer and bait shop down by the water on \u001b[93m\u001b[1mMiami\u001b[0m's \u001b[93m\u001b[1mVirginia Key\u001b[0m. \"Once we got out here, it was kind of too late to do anything but ride it out,\" Don says with a small laugh. Jimbo's looks like nothing so much as an abandoned shack. But whether through good luck or unexpectedly sound construction, it survived Wilma's fury. Mercifully, the winds had ebbed from 185 miles per hour (297.7 kilometers per hour) at sea to 120 miles per hour (193.1 kilometers per hour) by the time the storm hit, but \u001b[96m\u001b[1mWilma\u001b[0m still left almost all of \u001b[93m\u001b[1mSouth Florida\u001b[0m without power. For the next \u001b[95m\u001b[1mtwo\u001b[0m weeks a generator and donated bags of ice kept Jimbo's open—the only establishment on the key where visitors could be assured of a cold beer and a friendly welcome. \u001b[96m\u001b[1mWilma\u001b[0m was a record breaker in a season of unsettling records. \u001b[96m\u001b[1mKatrina\u001b[0m, at the \u001b[95m\u001b[1mend of August\u001b[0m, killed more than a thousand people and left much of \u001b[93m\u001b[1mNew Orleans\u001b[0m and the neighboring coast in \u001b[93m\u001b[1mruins\u001b[0m. The damage exceeded a hundred billion dollars—the costliest natural disaster in \u001b[93m\u001b[1mU.S.\u001b[0m history—and the toll in fractured lives is incalculable. \u001b[96m\u001b[1mRita\u001b[0m, in \u001b[95m\u001b[1mSeptember\u001b[0m, rivaled \u001b[96m\u001b[1mWilma\u001b[0m in intensity and ravaged the \u001b[93m\u001b[1mGulf Coast\u001b[0m through western \u001b[93m\u001b[1mLouisiana\u001b[0m and \u001b[93m\u001b[1mEast Texas\u001b[0m.\n",
+      "\n",
+      "\n",
+      "\u001b[93m\u001b[1mGEOGRAPHICAL ENTITIY\u001b[0m || \u001b[95m\u001b[1mTIME INDICATOR\u001b[0m || \u001b[92m\u001b[1mGEOPOLITICAL ENTITIY\u001b[0m || \u001b[96m\u001b[1mNATURAL PHENOMENON\u001b[0m\n",
+      "\n",
+      "\n",
+      "When the fiercest hurricane ever recorded in the \u001b[93m\u001b[1mAtlantic\u001b[0m is bearing down on you, a salvaged armchair under a wood-and-tin awning might seem a poor choice of shelter. But that's where Don E. (\"I'd rather keep my last name out of it\") was parked when \u001b[96m\u001b[1mWilma\u001b[0m hit \u001b[93m\u001b[1mSouth Florida\u001b[0m at \u001b[95m\u001b[1m6:30 a.m.\u001b[0m last \u001b[95m\u001b[1mOctober 24\u001b[0m. For Don and a buddy, it was the start of the workday at Jimbo's Place, a ramshackle beer and bait shop down by the water on \u001b[93m\u001b[1mMiami\u001b[0m's \u001b[93m\u001b[1mVirginia\u001b[0m Key. \"Once we got out here, it was kind of too late to do anything but ride it out,\" Don says with a small laugh. Jimbo's looks like nothing so much as an abandoned shack. But whether through good luck or unexpectedly sound construction, it survived Wilma's fury. Mercifully, the winds had ebbed from 185 miles per hour (297.7 kilometers per hour) at sea to 120 miles per hour (193.1 kilometers per hour) by the time the storm hit, but \u001b[96m\u001b[1mWilma\u001b[0m still left almost all of \u001b[93m\u001b[1mSouth Florida\u001b[0m without power. For the next \u001b[95m\u001b[1mtwo\u001b[0m weeks a generator and donated bags of ice kept Jimbo's open—the only establishment on the key where visitors could be assured of a cold beer and a friendly welcome. Wilma was a record breaker in a season of unsettling records. Katrina, at the \u001b[95m\u001b[1mend of August\u001b[0m, killed more than a thousand people and left much of \u001b[93m\u001b[1mNew Orleans\u001b[0m and the neighboring coast in \u001b[93m\u001b[1mruins\u001b[0m. The damage exceeded a hundred billion dollars—the costliest natural disaster in \u001b[93m\u001b[1mU.S.\u001b[0m history—and the toll in fractured lives is incalculable. \u001b[96m\u001b[1mRita\u001b[0m, in \u001b[95m\u001b[1mSeptember\u001b[0m, rivaled \u001b[96m\u001b[1mWilma\u001b[0m in intensity and ravaged the \u001b[93m\u001b[1mGulf Coast\u001b[0m through \u001b[93m\u001b[1mwestern Louisiana\u001b[0m and \u001b[93m\u001b[1mEast Texas\u001b[0m.\n",
+      "\n",
+      "\n",
+      "\u001b[93m\u001b[1mGEOGRAPHICAL ENTITIY\u001b[0m || \u001b[95m\u001b[1mTIME INDICATOR\u001b[0m || \u001b[92m\u001b[1mGEOPOLITICAL ENTITIY\u001b[0m || \u001b[96m\u001b[1mNATURAL PHENOMENON\u001b[0m\n",
+      "\n",
+      "\n",
+      "When the fiercest hurricane ever recorded in the \u001b[93m\u001b[1mAtlantic\u001b[0m is bearing down on you, a salvaged armchair under a wood-and-tin awning might seem a poor choice of shelter. But that's where Don E. (\"I'd rather keep my last name out of it\") was parked when \u001b[96m\u001b[1mWilma\u001b[0m hit \u001b[93m\u001b[1mSouth Florida\u001b[0m at \u001b[95m\u001b[1m6:30 a.m.\u001b[0m last \u001b[95m\u001b[1mOctober 24\u001b[0m. For Don and a buddy, it was the start of the workday at Jimbo's Place, a ramshackle beer and bait shop down by the water on \u001b[93m\u001b[1mMiami\u001b[0m's \u001b[93m\u001b[1mVirginia\u001b[0m Key. \"Once we got out here, it was kind of too late to do anything but ride it out,\" Don says with a small laugh. Jimbo's looks like nothing so much as an abandoned shack. But whether through good luck or unexpectedly sound construction, it survived Wilma's fury. Mercifully, the winds had ebbed from 185 miles per hour (297.7 kilometers per hour) at sea to 120 miles per hour (193.1 kilometers per hour) by the time the storm hit, but \u001b[96m\u001b[1mWilma\u001b[0m still left almost all of \u001b[93m\u001b[1mSouth Florida\u001b[0m without power. For the next \u001b[95m\u001b[1mtwo\u001b[0m weeks a generator and donated bags of ice kept Jimbo's open—the only establishment on the key where visitors could be assured of a cold beer and a friendly welcome. Wilma was a record breaker in a season of unsettling records. Katrina, at the \u001b[95m\u001b[1mend of August\u001b[0m, killed more than a thousand people and left much of \u001b[93m\u001b[1mNew Orleans\u001b[0m and the neighboring coast in \u001b[93m\u001b[1mruins\u001b[0m. The damage exceeded a hundred billion dollars—the costliest natural disaster in \u001b[93m\u001b[1mU.S.\u001b[0m history—and the toll in fractured lives is incalculable. \u001b[96m\u001b[1mRita\u001b[0m, in \u001b[95m\u001b[1mSeptember\u001b[0m, rivaled \u001b[96m\u001b[1mWilma\u001b[0m in intensity and ravaged the \u001b[93m\u001b[1mGulf Coast\u001b[0m through \u001b[93m\u001b[1mwestern Louisiana\u001b[0m and \u001b[93m\u001b[1mEast Texas\u001b[0m.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_to_entities(text2, large)[0][0]\n",
-    "text_to_entities(text2, medium)[0][0]\n",
+    "print('')\n",
+    "#text_to_entities(text2, medium)[0][0]\n",
+    "print('')\n",
     "text_to_entities(text2, small)[0][0]"
    ]
   },
@@ -158,19 +219,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "</br>\n",
     "\n",
     "## 2. Best model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_irl = '''\n",
+    "text_irl = ''' \n",
+    "Eleven people died and 11 others were injured after 35 buildings were struck across several regions, the state's emergency service said.\n",
     "\n",
+    "It added the worst damage to residential buildings was in the Kyiv region.\n",
+    "\n",
+    "Officials also reported strikes on two energy facilities in the Odesa region.\n",
+    "\n",
+    "The barrage came as Russia said it perceived the tank offer as \"direct\" Western involvement in the conflict.\n",
+    "\n",
+    "In what was a sustained and wide-ranging attack, the head of the Ukrainian army said Moscow launched 55 air and sea-based missiles on Thursday.\n",
+    "\n",
+    "Valery Zaluzhny added that 47 of them were shot down, including 20 around Kyiv .\n",
+    "\n",
+    "Earlier, Ukraine's air force said it had downed a cluster of Iranian-made attack drones launched by Russian forces from the Sea of Azov in the south of the country.\n",
+    "\n",
+    "A 55-year-old man was killed and two others wounded when non-residential buildings in the south of the capital were struck, officials reported.\n",
+    "\n",
+    "The offensive was a continuation of Russia's months-long tactic of targeting Ukraine's infrastructure. The freezing winter has seen power stations\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93m\u001b[1mGEOGRAPHICAL ENTITIY\u001b[0m || \u001b[95m\u001b[1mTIME INDICATOR\u001b[0m || \u001b[92m\u001b[1mGEOPOLITICAL ENTITIY\u001b[0m || \u001b[96m\u001b[1mNATURAL PHENOMENON\u001b[0m\n",
+      "\n",
+      " \n",
+      "Eleven people died and 11 others were injured after 35 buildings were struck across several regions, the state's emergency service said.\n",
+      "\n",
+      "It added the worst damage to residential buildings was in the \u001b[93m\u001b[1mKyiv\u001b[0m region.\n",
+      "\n",
+      "Officials also reported strikes on two energy facilities in the \u001b[93m\u001b[1mOdesa\u001b[0m region.\n",
+      "\n",
+      "The barrage came as \u001b[93m\u001b[1mRussia\u001b[0m said it perceived the tank offer as \"direct\" Western involvement in the conflict.\n",
+      "\n",
+      "In what was a sustained and wide-ranging attack, the head of the \u001b[92m\u001b[1mUkrainian\u001b[0m army said \u001b[93m\u001b[1mMoscow\u001b[0m launched 55 air and sea-based missiles on \u001b[95m\u001b[1mThursday\u001b[0m.\n",
+      "\n",
+      "Valery Zaluzhny added that 47 of them were shot down, including 20 around Kyiv .\n",
+      "\n",
+      "Earlier, \u001b[93m\u001b[1mUkraine\u001b[0m's air force said it had downed a cluster of Iranian-made attack drones launched by \u001b[92m\u001b[1mRussian\u001b[0m forces from \u001b[93m\u001b[1mthe Sea of Azov\u001b[0m in the south of the country.\n",
+      "\n",
+      "A 55-year-old man was killed and two others wounded when non-residential buildings in the south of the capital were struck, officials reported.\n",
+      "\n",
+      "The offensive was a continuation of \u001b[93m\u001b[1mRussia\u001b[0m's months-long tactic of targeting \u001b[93m\u001b[1mUkraine\u001b[0m's infrastructure. The freezing winter has seen power stations\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' '"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_to_entities(text_irl,large)[0][0]"
    ]
   },
   {
@@ -178,25 +303,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "text_to_entities(text_irl, INSERT_MODEL_HERE)[0][0]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5f489c0c09ff820f8ee5076ec4759de7add446fa379c2c24790f576095cb7fd3"
+    "hash": "5c7757c61c3038b6a2966176a66f79e9ef47a8224ad718662941cbc29bb3b6ef"
    }
   }
  },
